# controllerx

./: .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Pipfile  README.md  RELEASE_NOTES.md  azure-pipelines.yml  codecov.yaml  hacs.json  index.html  info.md  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.py
.github/: FUNDING.yml  RELEASE_NOTES.template.md  dependabot-bot.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-device.md  new_device.md  question.md
.github/workflows/: cicd.yaml  codeql-analysis.yml  hacs.yml  main.yml  release.yaml  update-license.yml
advanced/: index.html
advanced/action-types/: index.html
advanced/entity-groups/: index.html
advanced/event-integration/: index.html
advanced/hold-click-modes/: index.html
advanced/multiple-clicks/: index.html
advanced/predefined-actions/: index.html
advanced/stateful-controllers/: index.html
advanced/templating/: index.html
apps/controllerx/: const.py  controllerx.py  cx_const.py  cx_helper.py  cx_version.py  version.py
apps/z2m_ikea_controller/: z2m_ikea_controller.py
controllers/: index.html
controllers/AUA1ZBR2GW/: index.html
controllers/AdeoHRC99CZC045/: index.html
controllers/E1743/: index.html
controllers/E1744/: index.html
controllers/E1766/: index.html
controllers/E1810/: index.html
controllers/E1812/: index.html
controllers/E1EG7F/: index.html
controllers/E2002/: index.html
controllers/E2123/: index.html
controllers/E2201/: index.html
controllers/E2213/: index.html
controllers/HG06323/: index.html
controllers/HMPB2WM552/: index.html
controllers/HMPB6WM55/: index.html
controllers/HMPBI4FM/: index.html
controllers/HMSenMDIRWM55/: index.html
controllers/HueDimmer/: index.html
controllers/HueSmartButton/: index.html
controllers/ICTCG1/: index.html
controllers/LZL4BWHL01/: index.html
controllers/Legrand600083/: index.html
controllers/Legrand600088/: index.html
controllers/LutronPJ22B/: index.html
controllers/LutronPJ22BRL/: index.html
controllers/LutronPJ23BRL/: index.html
controllers/LutronPJ24B/: index.html
controllers/MFKZQ01LM/: index.html
controllers/MLI404002/: index.html
controllers/MLI404011/: index.html
controllers/Namron4512773/: index.html
controllers/OsramAC025XX00NJ/: index.html
controllers/PTM215X/: index.html
controllers/Philips929002398602/: index.html
controllers/Philips929003017102/: index.html
controllers/PhilipsRDM002/: index.html
controllers/Prolight5412748727388/: index.html
controllers/ROB2000070/: index.html
controllers/SK5700002228949/: index.html
controllers/SNZB01/: index.html
controllers/Shelly25/: index.html
controllers/ShellyDimmer2/: index.html
controllers/ShellyI3/: index.html
controllers/ShellyPlusI4/: index.html
controllers/SmartThingsButton/: index.html
controllers/TS0042/: index.html
controllers/TS0043/: index.html
controllers/TS0044/: index.html
controllers/TS0044F/: index.html
controllers/TasmotaButton/: index.html
controllers/TasmotaSwitch/: index.html
controllers/TerncyPP01/: index.html
controllers/TerncySD01/: index.html
controllers/TuYaERS10TZBVKAA/: index.html
controllers/WXCJKG11LM/: index.html
controllers/WXCJKG12LM/: index.html
controllers/WXCJKG13LM/: index.html
controllers/WXKG01LM/: index.html
controllers/WXKG02LM/: index.html
controllers/WXKG06LM/: index.html
controllers/WXKG07LM/: index.html
controllers/WXKG11LMRemote/: index.html
controllers/WXKG11LMSensorSwitch/: index.html
controllers/WXKG12LM/: index.html
controllers/WXKG15LM/: index.html
controllers/Z31BRL/: index.html
controllers/ZB3009/: index.html
controllers/ZB5121/: index.html
controllers/ZB5122/: index.html
controllers/ZNXNKG02LM/: index.html
controllers/ZS23000278/: index.html
controllers/ZYCT202/: index.html
docs/: .gitignore  Gemfile  _config.yaml  _config.yml  browserconfig.xml  configuration.md  device_template.md  faq.md  gen_device_pages.py  index.md  installation.md  main.py  mkdocs.yml  notes.yaml  site.webmanifest
docs/_data/: controllers.yml
docs/_includes/: favicons.html  head.html  header.html
docs/_layouts/: controller.html
docs/advanced/: action-types.md  custom-controllers.md  entity-groups.md  hold-click-modes.md  multiple-clicks.md  predefined-actions.md  templating.md
docs/controllers/: 324131092621.md  8718699693985.md  929002398602.md  929003017102.md  AU-A1ZBR2GW.md  E1524_E1810.md  E1743.md  E1744.md  E1766.md  E1812.md  E1EG7F.md  HG06323.md  HM-PB-2-WM55-2.md  HM-PB-6-WM55.md  HM-PBI-4-FM.md  HM-Sen-MDIR-WM55.md  ICTCG1.md  IM6001-BTP01.md  LEGRAND-600083.md  LEGRAND-600088.md  LZL4BWHL01.md  LutronCasetaProPico.md  MFKZQ01LM.md  MLI-404002.md  MLI-404011.md  Niko91004.md  OSRAM-AC02511XXNJ.md  OSRAM-AC025XX00NJ.md  PJ2-2B.md  PJ2-2BRL.md  PJ2-3BRL.md  PJ2-4B.md  PTM215X.md  ROB_200-007-0.md  SNZB-01.md  TERNCY-PP01.md  TERNCY-SD01.md  TS0043.md  TS0044.md  TS0044F.md  (+23 more)
docs/docs/: controllers.md  faq.md  index.md
docs/examples/: Sonos display.md  index.md  sonos-display.md  sonos.md  tasmota-switchmode11.md
docs/how-to/: custom-controllers.md  extract-controller-id.md  run-appdaemon.md  update.md
docs/others/: custom-controllers.md  extract-controller-id.md  integrations.md  multiple-clicks.md  run-appdaemon.md
docs/start/: configuration.md  examples.md  installation.md  type-configuration.md  update.md
docs2/: device_template.md  gen_device_pages.py  main.py  mkdocs.yml
docs2/docs/: controllers.md  index.md  index_old.md
examples/: index.html
examples/sonos/: index.html
examples/sonos-display/: index.html
examples/tasmota-double-button/: index.html
examples/tasmota-switchmode11/: index.html
faq/: index.html
others/enable-mqtt-plugin/: index.html
others/run-appdaemon/: index.html
others/update/: index.html
search/: search_index.json
test/: controller_test.py  utils.py
tests/: __init__.py  conftest.py  devices_test.py  test_utils.py  utils.py
(+470 files in other folders)
