[tool.poetry]
name = "controllerx"
version = "4.24.0"
description = "Create controller-based automations with ease to control your home devices and scenes."
authors = ["Xavier Moreno <xaviml.93@gmail.com>"]
license = "MIT"
packages = [
    { include = "cx_core", from = "apps/controllerx" },
    { include = "cx_devices", from = "apps/controllerx" },
    { include = "controllerx.py", from = "apps/controllerx" },
    { include = "cx_const.py", from = "apps/controllerx" },
    { include = "cx_helper.py", from = "apps/controllerx" },
    { include = "cx_version.py", from = "apps/controllerx" },
]

[tool.poetry.dependencies]
python = "^3.7"
appdaemon = "4.2.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-asyncio = "0.19.0"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-timeout = "2.1.0"
mock = "4.0.3"
pre-commit = "2.20.0"
commitizen = "2.29.3"
black = "22.10.0"
flake8 = "5.0.4"
mypy = "0.982"
types-PyYAML = "6.0.12"
types-mock = "4.0.15.2"
isort = "5.10.1"
mkdocs-gen-files = "0.4.0"
mkdocs-macros-plugin = "0.7.0"
mkdocs-material = "8.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = ".git,.hg,.mypy_cache,.tox,_build,buck-out,build,dist"

[tool.mypy]
python_version = "3.7"
warn_unused_configs = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
disallow_untyped_decorators = true
strict = true

[[tool.mypy.overrides]]
module = ["appdaemon.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
mock_use_standalone_module = true
timeout = 5
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    # Logs can be ignored
    "self.log",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "4.24.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "apps/controllerx/cx_version.py",
    "pyproject.toml:version"
]
