[options]
package_dir=
    =apps/controllerx

[isort]
profile=black

[black]
line-length = 88
exclude = .git,.hg,.mypy_cache,.tox,_build,buck-out,build,dist

[flake8]
ignore = E501, W503
exclude = controllerx.py
max-line-length = 88

[mypy]
python_version = 3.7
no_implicit_optional = True

[tool:pytest]
mock_use_standalone_module = true
timeout = 5
asyncio_mode = auto

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError
    self.log

[mypy-appdaemon.*]
ignore_missing_imports = true

# [mypy-mock.*]
# ignore_missing_imports = true
#
# [mypy-yaml.*]
# ignore_missing_imports = true

[mypy-pytest.*]
ignore_missing_imports = true

[mypy-pytest_mock.*]
ignore_missing_imports = true
